--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "help": "^3.0.2",
     "mime": "^2.0.3",
-    "node.js": "0.0.0"
+    "node.js": "0.0.0",
+    "ytdl-core": "^0.29.5"
   }
 }
