--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "debug": "^3.1.0",
     "discord.js": "^11.5.1",
     "express": "^4.17.1",
+    "ffmpeg": "0.0.4",
+    "google-auth-library": "^5.2.0",
+    "googleapis": "^42.0.0",
     "help": "^3.0.2",
     "mime": "^2.0.3",
     "node.js": "0.0.0",
+    "opusscript": "0.0.7",
+    "request": "^2.88.0",
     "ytdl-core": "^0.29.5"
   }
 }
