--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "google-auth-library": "^5.2.0",
     "googleapis": "^42.0.0",
     "help": "^3.0.2",
-    "mime": "^2.0.3",
+    "mime": "^2.4.4",
     "node.js": "0.0.0",
     "opusscript": "0.0.7",
+    "qs": "^6.8.0",
     "request": "^2.88.0",
+    "send": "^0.17.1",
     "ytdl-core": "^0.29.5"
   }
 }
