--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node.js": "0.0.0",
     "opusscript": "0.0.7",
     "qs": "^6.8.0",
+    "querystring": "^0.2.0",
     "request": "^2.88.0",
     "send": "^0.17.1",
     "ytdl-core": "^0.29.5"
