--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "google-auth-library": "^5.9.2",
     "googleapis": "^42.0.0",
     "help": "^3.0.2",
+    "http": "0.0.0",
     "m3u8stream": "^0.6.4",
     "node.js": "0.0.0",
     "opusscript": "0.0.7",
@@ -32,6 +33,7 @@
     "querystring": "^0.2.0",
     "request": "^2.88.0",
     "send": "^0.17.1",
+    "socket.io": "^2.3.0",
     "ytdl-core": "^1.0.7"
   }
 }
