--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "phoenix-bot2",
-  "version": "2.0.0",
+  "name": "phoenix-bot",
+  "version": "0.1",
   "description": "Bot for Discord app",
   "main": "index.js",
   "scripts": {
